[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Png/map/tree.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Gameplay/World/Tree.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "getting_damage"
loop = true

[sub_resource type="Animation" id=2]
resource_name = "idle"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9, 7.3722 )

[node name="Tree" type="StaticBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/getting_damage = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.13 )
texture = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18.4522 )
scale = Vector2( 1, 1.14649 )
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 0.105 )

[node name="Detector2" type="Area2D" parent="."]
visible = false
position = Vector2( 0.0150459, 0.098386 )
scale = Vector2( 1.7332, 1 )

[node name="CollisionShape" type="CollisionShape2D" parent="Detector2"]
position = Vector2( -7.1946e-11, 0 )
scale = Vector2( 0.617221, 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -0.445449, 2.44997 )
scale = Vector2( 1, 0.966591 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="mouse_entered" from="Hitbox" to="." method="_on_Tree_mouse_entered"]
[connection signal="mouse_exited" from="Hitbox" to="." method="_on_Tree_mouse_exited"]
[connection signal="body_entered" from="Detector2" to="." method="_on_Detector2_body_entered"]
[connection signal="body_exited" from="Detector2" to="." method="_on_Detector2_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
